[gd_scene load_steps=3 format=3 uid="uid://7kowkugjo4c1"]

[ext_resource type="Script" path="res://main.gd" id="1_row3c"]
[ext_resource type="Script" path="res://control.gd" id="2_rp8l4"]

[node name="main" type="Node2D"]
script = ExtResource("1_row3c")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_right = 264.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Host" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 56.0
offset_bottom = 38.0
text = "host"

[node name="Cancel" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 188.0
offset_top = 6.0
offset_right = 245.0
offset_bottom = 37.0
text = "cancel"

[node name="Connect" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 36.0
text = "connect"

[node name="Control" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_left = 155.0
offset_top = 126.0
offset_right = 195.0
offset_bottom = 166.0
script = ExtResource("2_rp8l4")

[connection signal="pressed" from="Panel/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Panel/Connect" to="." method="_on_Connect_pressed"]
